@@ -567,6 +567,24 @@ extern int cr_dist(struct job_record *job_ptr, const uint16_t cr_type)
 		return SLURM_SUCCESS;
 	}
 
+	/*
+	 * If SelectTypeParameters mentions to use a block distribution for 
+	 * cores by default, use that kind of distribution if no particular
+	 * cores distribution specified.
+	 * Note : cyclic cores distribution, which is the default, is treated
+	 * by the next code block
+	 */
+	if ( slurmctld_conf.select_type_param & CR_CORE_DEFAULT_DIST_BLOCK ) {
+		switch(job_ptr->details->task_dist) {
+		case SLURM_DIST_ARBITRARY:
+		case SLURM_DIST_BLOCK:
+		case SLURM_DIST_CYCLIC:
+		case SLURM_DIST_UNKNOWN:
+			_block_sync_core_bitmap(job_ptr, cr_type);
+			return SLURM_SUCCESS;
+		}
+	}
+
 	/* Determine the number of logical processors per node needed
 	 * for this job. Make sure below matches the layouts in
 	 * lllp_distribution in plugins/task/affinity/dist_task.c (FIXME) */
